Add me to contact me link

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
 
-<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 20-11-2024 -->
+<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 27-11-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron text-center bg-gradient-light">
@@ -47,7 +47,7 @@
                         <!-- Add animated link section -->
                         <div class="animated-link-container">
                             <a href="/about" class="animated-link">About me</a>
-                            <a href="/contact" class="animated-link">Contact</a>
+                            <a href="/contact" class="animated-link">Contact me</a>
                             <a href="/get" class="animated-link">GET projects</a>
                             <a href="/projects" class="animated-link">Tech Projects</a>
                             <a href="/link" class="animated-link">Links</a>
