--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,4 +1,4 @@
-<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 18-11-2024 -->
+<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 27-11-2024 -->
 <footer class="foot d-flex align-items-center text-secondary w-100">
     <nav class="navbar bg-black w-100">
         <div class="container-fluid">
@@ -8,7 +8,7 @@
                     <ul class="list-unstyled">
                         <li><a href="/" class="text-secondary text-decoration-none">Home</a></li>
                         <li><a href="/about" class="text-secondary text-decoration-none">About me</a></li>
-                        <li><a href="/contact" class="text-secondary text-decoration-none">Contact</a></li>  
+                        <li><a href="/contact" class="text-secondary text-decoration-none">Contact me</a></li>  
                     </ul>
                 </div>
 
