--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,4 +1,4 @@
-<!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 18-11-2024 -->
+<!-- Filename: main_nav.ejs | Author: Juan Arevalo | Date: 27-11-2024 -->
 
 <nav class="navbar navbar-expand-lg navbar-dark vh100 bg-primary">
     <div class="container-fluid">
@@ -19,7 +19,7 @@
                 </li>
 
                 <li class="nav-item  <%= title === 'Contact' ? 'active' : '' %>">
-                    <a class="nav-link" href="/contact"><i class="fa-regular fa-address-book"></i> Contact </a>
+                    <a class="nav-link" href="/contact"><i class="fa-regular fa-address-book"></i> Contact me</a>
                 </li>
 
                 <li class="nav-item  <%= title === 'Contact' ? 'active' : '' %>">
