Enhance about.ejs, contact.ejs, index.ejs

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
-        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 19-09-2024 -->
+        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 30-11-2024 -->
         <div class="d-flex justify-content-center">
             <main class="container py-4 float-sm-start">
                 <div class="jumbotron text-center text-light text-opacity-75">
@@ -11,7 +11,7 @@
                         <div class="card-body text-center bg-black">
                             <img src="../assets/images/juan.png" alt="Juan" class="rounded-circle img-fluid" style="width: 150px;">
                             <h5 class="my-3">Juan Arevalo</h5>
-                            <p class=" text-secondary mb-1">AI Learner & Expert in Mining Equipment Wear Solutions</p>
+                            <p class=" text-secondary mb-1">Expert in Mining Equipment Wear Solutions with AI knowledge</p>
                             <a href="/" class="text-secondary mb-3" style="display: block;" target="_blank">jbaruz.dev</a>
                             <p class="text-secondary mb-4">Etobicoke Area, Toronto, Ontario, CA</p>
                         </div>
