--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
-<%-include('partials/header.ejs')%>
+<%-include('partials/header.ejs')%> 
 
-<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 27-11-2024 -->
+<!-- Filename: index.ejs | Author: Juan Arevalo | Date: 30-11-2024 -->
 <div class="d-flex justify-content-center">
     <main class="container py-5 bg-black">
         <div class="jumbotron text-center bg-gradient-light">
-            <h1 class="display-4 text-light text-opacity-75">Revolutionizing GET Solutions with AI</h1>
-            <h2 class="subtitle text-secondary">Blending Ground Engaging Tool Expertise with AI to Elevate Customer Experience</h2>            
+            <h1 class="display-4 text-light text-opacity-75">Enhancing GET Solutions with 15 Years of Expertise</h1>
+            <h2 class="subtitle text-secondary">Leveraging Proven Techniques and Emerging AI Technologies</h2>            
 
             <!-- Add this line where you want to display the last updated date -->
             <p id="lastUpdated" style="color: darkslategray;">Today's date:  </p>
@@ -14,11 +14,11 @@
             <div class="star-wars-container text-info">
                 <div class="crawl">
                     <div class="title">
-                        <p>Hello, I'm Juan Arevalo—a Metallurgical Engineer Enhancing GET Solutions with AI Insights.</p>
-                        <h1>Over 15 Years in Wear Analysis, Now Integrating AI to Elevate Problem-Solving and Customer Collaboration</h1>
+                        <p>Hello, I'm Juan Arevalo—a Metallurgical Engineer specializing in Ground Engaging Tools and Welding Wear Parts.</p>
+                        <h1>Over 15 Years Dedicated to Improving GET Performance and Customer Collaboration</h1>
                     </div>
-                    <p>As a seasoned wear specialist in open-pit mining, I've dedicated my career to improving the performance and durability of ground-engaging tools. Having recently completed my AI studies, I'm eager to incorporate artificial intelligence as a tool to enhance my problem-solving abilities and work more efficiently with customers.</p>
-                    <p>My goal is to utilize AI to optimize maintenance strategies, extend equipment life, and deliver effective solutions in collaboration with clients. By blending proven engineering practices with cutting-edge technology, I aim to provide exceptional value and set new standards in the mining industry.</p>
+                    <p>As a seasoned wear specialist in open-pit mining, I've dedicated my career to enhancing the performance and durability of ground-engaging tools. My extensive experience includes providing technical support, resolving complex issues, and implementing innovative solutions that optimize mining operations.</p>
+                    <p>Recently, I've begun exploring how emerging technologies, including AI, can further augment my problem-solving abilities and enable me to work more efficiently with customers. My goal is to continue delivering effective solutions, optimizing maintenance strategies, and extending equipment life by blending proven engineering practices with new technological insights.</p>
                 </div>
             </div>
                      
@@ -29,13 +29,13 @@
                     <div class="card mb-4 shadow-sm bg-primary">
                         <div class="card-body text-light bg-primary">
                             <h2 class="card-title text-light text-opacity-75">Hi, I'm Juan!</h2>
-                            <h5 class="mt-4 text-light text-opacity-50">Esential Quotes</h5>
+                            <h5 class="mt-4 text-light text-opacity-50">Essential Quotes</h5>
                             <blockquote class="blockquote"> 
                                 <p>"Experience is the name everyone gives to their mistakes"</p>
                                 <p class="blockquote-footer bg-primary text-black text-opacity-75 text-center">Oscar Wilde, <cite title="Source Title">Irish Playwright</cite></p>
                             </blockquote>
                             <blockquote class="blockquote">
-                                <p>“Our Character is what we do when we think no one is looking.”</p>
+                                <p>“Our character is what we do when we think no one is looking.”</p>
                                 <p class="blockquote-footer bg-primary text-black text-opacity-75 text-center">H. Jackson Brown Jr., Author, <cite title="Source Title">Life's Little Instruction Book</cite></p>
                             </blockquote>
                             <p class="mt-3 text-light text-opacity-50">Thank you for visiting!</p>
@@ -48,7 +48,7 @@
                         <div class="animated-link-container">
                             <a href="/about" class="animated-link">About me</a>
                             <a href="/contact" class="animated-link">Contact me</a>
-                            <a href="/get" class="animated-link">GET projects</a>
+                            <a href="/get" class="animated-link">GET Projects</a>
                             <a href="/projects" class="animated-link">Tech Projects</a>
                             <a href="/link" class="animated-link">Links</a>
                         </div>
@@ -61,7 +61,6 @@
     </main>
 </div>
 
-
 <%-include ('partials/footer.ejs')%>
 <script>
     function getCurrentDate() {
@@ -70,7 +69,7 @@
         const month = String(currentDate.getMonth() + 1).padStart(2, '0'); // January is 0
         const year = currentDate.getFullYear();
 
-        return ` ${day}-${month}-${year}`;
+        return `${day}-${month}-${year}`;
     }
 
     document.getElementById('lastUpdated').innerText += getCurrentDate();
