Add image as banner in botton_nav

--- a/views/partials/bottom_nav.ejs
+++ b/views/partials/bottom_nav.ejs
@@ -1,4 +1,4 @@
-<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 27-11-2024 -->
+<!-- Filename: bottom_nav.ejs | Author: Juan Arevalo | Date: 01-12-2024 -->
 <footer class="foot d-flex align-items-center text-secondary w-100">
     <nav class="navbar bg-black w-100">
         <div class="container-fluid">
@@ -29,6 +29,9 @@
                     <a href="https://www.instagram.com/jbaruz1" class="me-2" target="_blank"><i class="fab fa-instagram text-secondary"></i></a>
 
 
+                </div>
+                <div>
+                    <img src="/assets/images/banner.png" class="img-fluid"    alt="Banner summarize Juan life">
                 </div>
             </div>
 
