--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -308,7 +308,7 @@
                 </div>
             </div>
         </div>
+        <%-include ('partials/bottom_nav.ejs')%>
     </main>
 </div>
-
 <%- include('partials/footer.ejs')%>
